# tg_assistant

./: .gitignore  Dockerfile  add_category.py  bot.dockerfile  compose.yml  main.py  pyproject.toml  scheduler.dockerfile
alembic/: env.py
alembic/versions/: 2025_02_04_1517-ef5b4a366db3_init.py  2025_04_03_1623-9fdce14642ef_events.py  2025_04_07_1240-c7b72be727f2_add_event_message_count.py  2025_04_09_1614-9549a6aca82d_change_repeat_enum.py
envs/: env.local
scripts/: add_category.py  entrypoint.sh  schedule_entrypoint.sh
src/: configs.py  handlers.py  scheduler.py  utils.py
src/core/: unitofwork.py
src/database/: __init__.py  db_helper.py  models.py
src/expense/: exceptions.py  handlers.py  schemes.py  service.py
src/expense/handlers/: expense.py  statistics.py
src/expense_statistics/: handlers.py  service.py
src/reminders/: handlers.py  schemes.py  services.py  utils.py
src/repository/: base.py  category.py  event.py  expense.py  user.py
src/scheduler/: main.py  tasks.py  utils.py
src/utils/: __init__.py  datetime_utcnow.py
